- Fixed the update profile, now it correctly update the name of the user - Changed the profile window z-index to be greater than the z-index of folder windows

--- a/TheSocialOS/src/net/thesocialos/client/resources/Profile.css
+++ b/TheSocialOS/src/net/thesocialos/client/resources/Profile.css
@@ -1,6 +1,8 @@
 @CHARSET "UTF-8";
 .profile {
 	background: rgb(125,126,125); /* Old browsers */
+		z-index: 800;
+		border: 1px;
 		background: -moz-linear-gradient(-45deg,  rgba(125,126,125,1) 0%, rgba(14,14,14,1) 99%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(99%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
 		background: -webkit-linear-gradient(-45deg,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 99%); /* Chrome10+,Safari5.1+ */
@@ -8,7 +10,6 @@
 		background: -ms-linear-gradient(-45deg,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 99%); /* IE10+ */
 		background: linear-gradient(-45deg,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 99%); /* W3C */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=1 );
-		border: 1px:
 	/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffe8', endColorstr='#d6dbbf',GradientType=0 ); /* IE6-9 */
 	/*background: linear-gradient(top, rgb(254,255,232) 0%,rgb(214,219,191) 100%); /* W3C */
 
